Issue #448: Built new endpoints for getting group and badge which are aligned with the new temporary API structure. - JsonTemplater: Added tons of new features (it turned out that they aren't really necessary for now, but they will come into play later). Now we can rename json keys and have blocks of keys which show up conditionally based on user permissions. - Group Model: Added new methods to filter the badges cache dynamically so it only shows items that the current user can see. Updated the api_v1 template to use the new permission-based structure (though without any additional permissions for now). - Badges Controller: Added new `get` action. Changed the `my_badges` action to always return json. - Groups Controller: Added new `get` action. Changed the `my_groups` action to always return json. - Routes: Added new get routes. - Swagger.json: Added new api routes
